--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
+    "@material-tailwind/react": "^2.1.9",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.20.2",
+    "@testing-library/user-event": "^14.5.2",
+    "moment": "^2.30.1",
+    "persist": "^0.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.12",
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.10"
   }
 }
