--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.7.5",
     "moment": "^2.30.1",
     "persist": "^0.2.7",
+    "ra-data-simple-rest": "^5.1.4",
     "react": "^18.3.1",
+    "react-admin": "^5.1.4",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.1",
