fix mongdb atlas

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
 PORT = 3001
-MongoDB = mongodb://127.0.0.1:27017/story
+MongoDB = mongodb+srv://root:123@cluster0.bsq2bdv.mongodb.net/story?retryWrites=true&w=majority&appName=Cluster0   
 LIMIT_PRODUCTS = 2
+
+
+
+mongodb://127.0.0.1:27017/story
