--- a/data/.env
+++ b/data/.env
@@ -1,1 +1,1 @@
-MongoDB = mongodb://127.0.0.1:27017/story
+MongoDB = mongodb+srv://root:123@cluster0.bsq2bdv.mongodb.net/story?retryWrites=true&w=majority&appName=Cluster0
