--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,6 @@
   "engines": {
     "node": "14.x"
   },
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
@@ -19,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.5.3",
     "nodemon": "^3.1.4",
     "slugify": "^1.6.6"
