--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.5",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "persist": "^0.2.7",
     "ra-data-simple-rest": "^5.1.4",
